[tool.poetry]
name = "undergroundchat"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <pavelmazikinvladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
